force-app/main/default/objects/numm__Conditionnement__c/numm__Conditionnement__c.object-meta.xml
<CustomObject>
    <label>Conditionnement</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conditionnements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>