force-app/main/default/objects/numm__Conditionnement__c/fields/numm__Cat_gorie__c.field-meta.xml
<CustomField>
    <fullName>numm__Cat_gorie__c</fullName>
    <label>Zold_Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tonne</fullName>
            </value>
            <value>
                <fullName>kilo</fullName>
            </value>
            <value>
                <fullName>unité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>