force-app/main/default/objects/numm__Conditionnement__c/fields/numm__Contenance_brute__c.field-meta.xml
<CustomField>
    <fullName>numm__Contenance_brute__c</fullName>
    <label>Contenance brute</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>