force-app/main/default/objects/numm__Conditionnement__c/fields/numm__Tare_du_contenant__c.field-meta.xml
<CustomField>
    <fullName>numm__Tare_du_contenant__c</fullName>
    <inlineHelpText>Perte de valeur connue liée au conditionnement</inlineHelpText>
    <label>Tare du contenant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>