force-app/main/default/objects/numm__Conditionnement__c/fields/numm__Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Palox</fullName>
            </value>
            <value>
                <fullName>Vrac</fullName>
            </value>
            <value>
                <fullName>lot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>