force-app/main/default/objects/numm__Conditionnement__c/fields/numm__Unit__c.field-meta.xml
<CustomField>
    <fullName>numm__Unit__c</fullName>
    <inlineHelpText>Sélectionner l&#39;unité du type du conditionnement</inlineHelpText>
    <label>Unité du type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tonne</fullName>
            </value>
            <value>
                <fullName>Kilo</fullName>
            </value>
            <value>
                <fullName>Unité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>