force-app/main/default/objects/numm__Conditionnement__c/fields/numm__UnitLookUp__c.field-meta.xml
<CustomField>
    <fullName>numm__UnitLookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Unité est utilisée pour le calcul de valorisation des stocks, ainsi que le calcul de la tare du conditionnement et la contenance brute</inlineHelpText>
    <label>Unité</label>
    <referenceTo>numm__Unit__c</referenceTo>
    <relationshipLabel>Conditionnements</relationshipLabel>
    <relationshipName>Conditionnements</relationshipName>
    <type>Lookup</type>
</CustomField>