force-app/main/default/objects/numm__Conditionnement__c/validationRules/numm__tare_et_brut.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__tare_et_brut</fullName>
    <active>true</active>
    <errorConditionFormula>numm__Tare_du_contenant__c &gt;  numm__Contenance_brute__c</errorConditionFormula>
    <errorDisplayField>numm__Tare_du_contenant__c</errorDisplayField>
    <errorMessage>La tare ne peut pas être supérieure a la contenance totale.</errorMessage>
</ValidationRule>